# borg-helper

./: Cargo.toml  README.md  borg-backup.py  config.yaml.example  config_example.json
.github/workflows/: rust.yml
src/: main.rs
src/sources/: Local.rs  SSH.rs  influxdb.rs  k8spsql.rs  local.rs  mod.rs  psql.rs  saves.rs  ssh.rs
src/targets/: SSH.rs  mod.rs
src/utils/: cmd.rs  folder.rs  k8s.rs  mod.rs  mountable.rs
test/configs/: 01-local.yaml  02-ssh.yaml  99-full.yaml
