[package]
name = "borg_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
hostname = "0.3.1"
rpassword = "7.3.1"
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.5.0"
serde_yaml = "0.9.30"
void = "1.0.2"
