[package]
name = "borg_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
fs_extra = "1.3.0"
hostname = "0.3.1"
more-asserts = "0.3.1"
rpassword = "7.3.1"
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.5.0"
serde_yaml = "0.9.30"
typetag = "0.2.15"
void = "1.0.2"
