[package]
name = "borg_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
etcetera = "0.8.0"
fs_extra = "1.3.0"
hostname = "0.4.0"
include_dir = "0.7.3"
log = "0.4.21"
mktemp = "0.5.1"
more-asserts = "0.3.1"
netstat2 = "0.9.1"
rpassword = "7.3.1"
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
typetag = "0.2.16"
void = "1.0.2"
